Closed
Bug 328298
Opened 20 years ago
Closed 20 years ago
Crash when passing null argument in loadAndRegisterSheet
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8.1
People
(Reporter: martijn.martijn, Assigned: Gavin)
Details
(Keywords: crash, fixed1.8.1, testcase)
Attachments
(3 files)
|
676 bytes,
text/html
|
Details | |
|
1.95 KB,
text/plain
|
Details | |
|
993 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
dbaron
:
approval-branch-1.8.1+
|
Details | Diff | Splinter Review |
See upcoming testcase, which crashes when clicking on the button.
You need to test the testcase locally, because it needs enhanced privileges.
| Reporter | ||
Comment 1•20 years ago
|
||
| Assignee | ||
Comment 2•20 years ago
|
||
| Assignee | ||
Comment 3•20 years ago
|
||
Assignee: dbaron → gavin.sharp
Status: NEW → ASSIGNED
Attachment #213210 -
Flags: superreview?(dbaron)
Attachment #213210 -
Flags: review?(dbaron)
| Assignee | ||
Updated•20 years ago
|
OS: Windows XP → All
Hardware: PC → All
Attachment #213210 -
Flags: superreview?(dbaron)
Attachment #213210 -
Flags: superreview+
Attachment #213210 -
Flags: review?(dbaron)
Attachment #213210 -
Flags: review+
| Assignee | ||
Comment 4•20 years ago
|
||
mozilla/layout/base/nsStyleSheetService.cpp; new revision: 1.5;
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
| Assignee | ||
Comment 5•20 years ago
|
||
Comment on attachment 213210 [details] [diff] [review]
null check aSheetURI
Guess there'd be no harm in getting this for 1.8.1 too.
Attachment #213210 -
Flags: approval-branch-1.8.1?(dbaron)
Attachment #213210 -
Flags: approval-branch-1.8.1?(dbaron) → approval-branch-1.8.1+
| Assignee | ||
Comment 6•20 years ago
|
||
mozilla/layout/base/nsStyleSheetService.cpp; new revision: 1.3.12.1;
You need to log in
before you can comment on or make changes to this bug.
Description
•