Bug 328298: crash when passing null to loadAndRegisterSheet, r+sr=dbaron